@@ -26,7 +26,7 @@ Todoyu::$CONFIG['SYSTEM']['locale']			= '{$locale}';
 
 	// Date and time settings
 Todoyu::$CONFIG['SYSTEM']['timezone']		= '{$timezone}';
-Todoyu::$CONFIG['SYSTEM']['firstDayOfWeek']	= '{$firstDayOfWeek}';
+Todoyu::$CONFIG['SYSTEM']['firstDayOfWeek']	= {$firstDayOfWeek};
 
 	// Command line interface
 Todoyu::$CONFIG['SYSTEM']['todoyuURL']		= '{$todoyuURL}';
